force-app/main/default/objects/Contact/fields/EU_Sys_Row_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Sys_Row_ID__c</fullName>
    <externalId>true</externalId>
    <label>E10 Sys Row ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>