force-app/main/default/objects/Contact/fields/Legacyid__c.field-meta.xml
<CustomField>
    <fullName>Legacyid__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>