force-app/main/default/objects/Contact/fields/Net_Promoter__c.field-meta.xml
<CustomField>
    <fullName>Net_Promoter__c</fullName>
    <label>Net Promoter Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>