force-app/main/default/objects/Contact/fields/Net_Promoter_Score_Comments__c.field-meta.xml
<CustomField>
    <fullName>Net_Promoter_Score_Comments__c</fullName>
    <label>Net Promoter Score Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>