force-app/main/default/objects/Contact/fields/PreferredMethodOfCommunication__c.field-meta.xml
<CustomField>
    <fullName>PreferredMethodOfCommunication__c</fullName>
    <label>Preferred Method Of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>