force-app/main/default/objects/Contact/fields/Realignment_Communication__c.field-meta.xml
<CustomField>
    <fullName>Realignment_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells a user that the contact has received verbal or written communication regarding the realignment.</description>
    <label>Realignment Communication</label>
    <type>Checkbox</type>
</CustomField>