force-app/main/default/objects/Contact/fields/Receive_Price_Increase_Notification__c.field-meta.xml
<CustomField>
    <fullName>Receive_Price_Increase_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Price Increase Notification</label>
    <type>Checkbox</type>
</CustomField>