force-app/main/default/objects/Contact/fields/RegisteredonWeb__c.field-meta.xml
<CustomField>
    <fullName>RegisteredonWeb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered on Web</label>
    <type>Checkbox</type>
</CustomField>