force-app/main/default/objects/Contact/fields/Secondary_Department__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Department__c</fullName>
    <label>Secondary Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Departments</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Finance/Accounting/Credit</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Production/Manufacturing</fullName>
            </value>
            <value>
                <fullName>Executive/Corp Management</fullName>
                <label>Executive/Corporate Management</label>
            </value>
            <value>
                <fullName>New Ventures/R&amp;D/Engineer</fullName>
            </value>
            <value>
                <fullName>Pre-Press/Art/Plate/Ink</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Technical Service</fullName>
            </value>
            <value>
                <fullName>Shipping/Receiving</fullName>
            </value>
            <value>
                <fullName>Import/Export</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Data Processing</fullName>
            </value>
            <value>
                <fullName>Internal Operator/Office</fullName>
                <label>Internal Oper/Office</label>
            </value>
            <value>
                <fullName>Press Room/Printing</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Chemist</fullName>
            </value>
            <value>
                <fullName>Designer/Art Department/Graphic</fullName>
                <label>Desig/Art Dept/Graphic</label>
            </value>
            <value>
                <fullName>Sales/Marketing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>