force-app/main/default/objects/Contact/fields/Secondary_Functionality__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Functionality__c</fullName>
    <label>Secondary Functionality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Involved with</fullName>
            </value>
            <value>
                <fullName>Owner/CEO</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>Manager/Director</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Controller/Comptroller</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Chairperson</fullName>
            </value>
            <value>
                <fullName>Agent/Representative</fullName>
            </value>
            <value>
                <fullName>Chief</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Estimator</fullName>
            </value>
            <value>
                <fullName>Chief Operating Officer</fullName>
            </value>
            <value>
                <fullName>Co-Owner</fullName>
            </value>
            <value>
                <fullName>Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>Key Contact</fullName>
            </value>
            <value>
                <fullName>Visionary</fullName>
            </value>
            <value>
                <fullName>Implementer</fullName>
            </value>
            <value>
                <fullName>Purchaser</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>