force-app/main/default/objects/Contact/fields/X2019_Customer_Seminar_Invitee__c.field-meta.xml
<CustomField>
    <fullName>X2019_Customer_Seminar_Invitee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2019 Customer Seminar Invitee</label>
    <type>Checkbox</type>
</CustomField>