force-app/main/default/objects/Contact/fields/X2020_Customer_Seminar_Invitee__c.field-meta.xml
<CustomField>
    <fullName>X2020_Customer_Seminar_Invitee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2020 Customer Seminar Invitee</label>
    <type>Checkbox</type>
</CustomField>